<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.miprimeraapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_close"/>
    <item
        android:id="@+id/action_google"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_google"/>
    <item
        android:id="@+id/action_github"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_github"/>
    <item
        android:id="@+id/action_linkedin"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_linkedin"/>
    <item
        android:id="@+id/action_activitymain2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_activitymain2"/>

</menu>
